integrated Rish changes into section 2. changed all et. al to et al.

--- a/bib/whitepaper.bib
+++ b/bib/whitepaper.bib
@@ -1,3 +1,20 @@
+@article{Palensky2011,
+    author = {Palensky, Peter and Dietrich, Deitmar},
+    citeulike-article-id = {11914475},
+    citeulike-linkout-0 = {http://palensky.org/pdf/Palensky2011.pdf},
+    journal = {IEEE Transactions on Industrial Informatics},
+    keywords = {demand, energy},
+    number = {3},
+    pages = {381--388},
+    posted-at = {2013-01-18 15:57:46},
+    priority = {2},
+    publisher = {IEEE},
+    title = {{Demand side management: Demand response, intelligent energy systems, and smart loads}},
+    url = {http://palensky.org/pdf/Palensky2011.pdf},
+    volume = {7},
+    year = {2011}
+}
+
 @BOOK{ASHRAE:tgfdpe,
    AUTHOR = {ASHRAE},
    TITLE = {Thermal Guidelines for Data Processing Environments, Special Publication},
