--- a/text/ESPintegration.tex
+++ b/text/ESPintegration.tex
@@ -25,77 +25,39 @@
 %\subsection{Electricity Service Provider Methods and \\Programs}
 %%TP: Change title slightly
 \label{sub:EPP}
-An ESP seeks to provide efficient and reliable generation, transmission, and 
-distribution of electricity. \emph{Methods} and \emph{Programs} employed by ESPs and their consumers 
-are key to managing and balancing the supply and demand of electricity. The \textit{methods} 
-describe how ESPs manage supply, and the \textit{programs} describe the activities that 
-the ESPs can offer to their consumers in order to balance demand with supply.
+An Electricity Service Provider (ESP) seeks to supply efficient and reliable generation, transmission, and distribution of electricity. \emph{Market-based programs} employed by ESPs and consumers´ participation are key to manage these electricity supply goals. While the goals describe ESPs overarching objective for electricity supply, the \textit{programs} describe the market products that the ESPs can offer to their consumers to achieve those goals. Such electricity market goals and demand-side programs are well studied for non-SC customer sectors \cite{Palensky2011}. 
 
-Although critical to ESPs, methods are generally not visible to the consumer of the electricity because they
-operate within the generation or transmission stations. These methods are the major means by which supply and demand of electricity are managed.
-
-ESP programs encourage customer responses to target both energy efficiency and real-time management of demand for electricity. Real-time programs can be \emph{day-ahead} or \emph{day-of}. Day-ahead programs refer to timescales of notification and responses from the customer that are determined based on advanced forecasting and capacity planning (for example, day-ahead 24-hour wholesale electricity prices). The programs are day-of are the ones when the notification and responses are based on same-day capacity planning or emergency response. 
-
-An example of an ESP program 
-that encourages energy efficiency would be to provide home consumers a financial incentive for replacing 
-single pane windows with double pane windows. On the other hand, an example that illustrates programs that help 
-with real-time demand management would be to provide a financial incentive for reducing load 
-during high demand periods (such as hot summer afternoons when air conditioners are heavily utilized). 
-
-The following is a list and brief definitions of key methods and programs.  
-
-\subsection{Methods}
+\subsection{Electricity Market Goals and Programs}
+Although critical to ESPs, the goals are generally not visible to the consumer of the electricity because they operate within the supply-side of the electric grid (for example, generation). These programs are the means by which customers get to engage in the electricity markets. The following is a summarized list and brief definitions of key these goals.
 \begin{itemize}
-\item {\bf Regulation (Up or Down):} Methods used to maintain the portion of electricity generation reserves 
-that are needed to balance generation and demand at all times. Raising supply is \emph{up} regulation and lowering 
-supply is \emph{down} regulation. There are many types of reserves (for example, operating reserves, ancillary services), distinguished by who manages them and what they are used for.
-
-\item {\bf Transmission Congestion:} Methods used to resolve congestion that occurs when there is not enough 
-transmission capability to support all requests for transmission services. Transmission system operators 
-must re-dispatch generation or, 
-in the limit, deny some of these requests to prevent transmission lines from becoming overloaded.
-
-\item {\bf Distribution Congestion:}  Methods used to resolve congestion that occurs when the 
-distribution control system 
-is overloaded.  It generally results in deliveries that are held up or delayed.  
-
-\item {\bf Frequency response:}  Methods used to keep grid frequency constant and in-balance. 
-Generators are typically used for frequency response, but any appliance that operates to a duty cycle 
-(such as air conditioners and heat pumps) could be used to provide a 
-constant and reliable grid balancing service by timing their duty cycles in response to system load.   
-
-\item {\bf Grid Scale Storage:}  Methods used to store electricity on a large scale. 
-Pumped-storage hydroelectricity is the largest-capacity form of grid energy storage. 
-
-\item {\bf Renewables:}  Methods used to manage the variable uncertain generation nature of 
-many renewable resources. 
+\item {\bf Transmission Congestion:} The goal is to resolve congestion that occurs when there is not enough transmission capability to support all requests for transmission services. Transmission system operators must re-dispatch generation or, in the limit, deny some of these requests to prevent transmission lines from becoming overloaded.
+\item {\bf Distribution Congestion:} The goal is to resolve congestion that occurs when the distribution control system is overloaded. It generally results in deliveries that are held up or delayed.
+\item {\bf Frequency response:} The goal is to keep grid frequency constant and in-balance. Generators are typically used for frequency response, but any appliance that operates to a duty cycle (such as air conditioners and heat pumps) could be used to provide a constant and reliable grid balancing service by timing their duty cycles in response to system load.
+\item {\bf Peak and Reserve Capacity:} The overall generation and extra capacity for supply during the peak or unforeseen high demand days. Renewable Integration: The goal is to manage the variable uncertain generation nature of many renewable resources.
 \end{itemize}
 
-\subsection{Programs}
+For efficient management of these goals, ESP programs encourage customer-side responses to manage demand for electricity at different time scales. Such market-based programs can be day-ahead or day- of. Day-ahead programs refer to timescales of notification and responses from customers that are determined based on advanced forecasting and capacity planning (for example, day-ahead hourly wholesale electricity prices). The programs that are day-of are the ones when the notification and responses support same-day capacity planning and/or emergency response.
+
+An example of an ESP program that encourages energy efficiency would be to provide home consumers rebates and financial incentives to replace single pane windows with double pane windows. An example that illustrates programs that help with day-ahead or day-of demand management would be to provide credits and financial incentives to reduce load during high demand periods (such as hot summer afternoons when air conditioners are heavily utilized). The following is a summarized list and brief definitions of key these programs.
+
+%\subsection{Programs}
 \begin{itemize}
-\item {\bf Energy Efficiency:}  Programs used to reduce overall electricity consumption.
+\item {\bf Energy Efficiency:} Programs offered to reduce overall electricity consumption, thus eliminate the need for electricity generation.
+\item {\bf Peak Load Reduction:} Programs used to shed load during peak times. Here the load reduced during the peak is either not used at a later time, or the load is shifted to, typically, non-peak hours. 
 
-\item {\bf Peak Shedding:}  Programs used to reduce load during peak times, 
-where the reduced load is not used at a later time. 
-
-\item {\bf Peak Shifting:}  Programs where the load during peak times is moved to, typically, non-peak hours. 
-
-\item {\bf Dynamic Pricing:}  Time varying pricing programs used to increase, shed,
- or shift electricity consumption. 
+\item {\bf Dynamic Pricing:}  Time varying pricing programs used to enable changes in the electricity consumption. 
 The two types of pricing are peak and real-time.  Peak pricing is pre-scheduled; however, the consumer 
 does not know if a certain day will be a peak or a non-peak day until day-ahead or day-of.  
-Real-time pricing is not pre-scheduled; prices can be set day-ahead or day-of.
+Real-time pricing is not pre-scheduled; prices can be set day-ahead or day-of, reflecting the real-time electricity system prices.
+
+\item {\bf Regulation (Up or Down):} Programs used to dispatch the portion of electricity generation reserves that are needed to manage changing demand at all times. Raising supply is \emph{up} regulation and lowering 
+supply is \emph{down} regulation. There are many types of reserves (for example, operating reserves, ancillary services), distinguished by who manages them and what they are used for.
 \end{itemize}
+%Although critical to ESPs, methods are generally not visible to the consumer of the electricity because they operate within the generation or transmission stations. These methods are the major means by which supply and demand of electricity are managed.
 
-Although these methods and programs have historically not been relevant to SCs,
-the following example illustrates their potential relevance.
-The generation capacity requirements and response timescales vary across the country for ESPs and operators. For example, the New England independent system operator (ISO-NE) uses a method 
-of regulation and reserves that relies heavily on a day-ahead market program. This provides an opportunity 
-for demand side resources---such as SCs with renewable energy sources---to participate in the 
-market supplying the ISO-NE with electricity. It also makes the ISO-NE particularly sensitive to major 
-fluctuations in electricity demand, which, as discussed further in the questionnaire section, is an emerging 
-characteristic of some of the largest SCs.%\footnote {http://drrc.lbl.gov/sites/drrc.lbl.gov/files/LBNL-5958E.pdf}
+%ESP programs encourage customer responses to target both energy efficiency and real-time management of demand for electricity. Real-time programs can be \emph{day-ahead} or \emph{day-of}. Day-ahead programs refer to timescales of notification and responses from the customer that are determined based on advanced forecasting and capacity planning (for example, day-ahead 24-hour wholesale electricity prices). The programs are day-of are the ones when the notification and responses are based on same-day capacity planning or emergency response. 
 
-This paper assumes that the given grid is a constant. However, it is expected 
-that future grid infrastructures will 
-evolve with smart-grid capabilities. 
+%An example of an ESP program that encourages energy efficiency would be to provide home consumers a financial incentive for replacing single pane windows with double pane windows. On the other hand, an example that illustrates programs that help with real-time demand management would be to provide a financial incentive for reducing load during high demand periods (such as hot summer afternoons when air conditioners are heavily utilized). The following is a list and brief definitions of key methods and programs.  
+
+The following example illustrates the potential relevance of these programs to SCs.
+The generation capacity requirements and the timescales of customers´ response vary across the country for ESPs and system operators. For example, the New England independent system operator (ISO-NE) reserve capacity planning that relies heavily on a day-ahead market program. This provides an opportunity for demand side resources---such as SCs with local generation sources or flexible loads---to participate in the ISO-NE electricity markets. It also makes the ISO-NE particularly less sensitive to major changes in electricity demand, which, as discussed further in the questionnaire section, is an emerging characteristic of some of the largest SCs.
