--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -74,7 +74,7 @@ change for liquid temperature. Although it is not explored in this paper, it
 may be possible to use increases in liquid cooling temperature as a
 grid-integration strategy as well. 
 
-Ghatikar et. al \cite{Ghatikar2012a} describe field studies on using thermal
+Ghatikar et al. \cite{Ghatikar2012a} describe field studies on using thermal
 management as a grid-integration strategy. They demonstrate increasing ``facility HVAC temperature set points in order to decrease HVAC power
 demand” in two different field locations. There was only a small
 electricity demand decrease demonstrated.
@@ -84,12 +84,12 @@ either aim to place incoming computationally intensive jobs in a thermal-aware
 manner on servers with lower temperatures or attempt to migrate or load-balance
 jobs from high-temperature servers to servers with lower temperatures.
 
-Kaushik et. al \cite{kaushik_t*:_2012} proposed \emph{T*}, a system that is
+Kaushik et al. \cite{kaushik_t*:_2012} proposed \emph{T*}, a system that is
 aware of server thermal profiles and reliability as well as data semantics
 (computation job rates, job sizes, etc). This system saves cooling energy costs
 by using thermal-aware job placements without trading off performance.
 
-Sarood et. al \cite{SaroodSC11} designed a runtime system that does
+Sarood et al. \cite{SaroodSC11} designed a runtime system that does
 temperature-aware load balancing in datacenters using DVFS and task migration.
 They also discussed how hotspots could be avoided in datacenters, and showed
 cooling costs can be reduced by up to 48\% with temperature-aware load
@@ -121,7 +121,7 @@ condition.
 
 There are many use cases in a grid computing environment that require QoS
 guarantees in terms of guaranteed response time, including time-critical tasks
-that must meet a deadline. Foster et. al~\cite{foster_distributed_1999,foster_anatomy_2001} proposed \emph{advance
+that must meet a deadline. Foster et al.~\cite{foster_distributed_1999,foster_anatomy_2001} proposed \emph{advance
 reservations} to achieve time guarantees. Advance reservation is a guarantee for
 the availability of a certain amount of resources to users and applications at
 specific times in the future. The advance reservation feature requires
@@ -131,7 +131,7 @@ Sun Grid Engine, PBS, OpenPBS, Torque, SLURM, Maui, and Moab support advance
 reservation capabilities. \\
 
 \subsection{Load Migration}
-Chiu et. al \cite{chiu_electric_2012} discussed an electrical grid balancing
+Chiu et al. \cite{chiu_electric_2012} discussed an electrical grid balancing
 problem that was experienced in the Pacific Northwest. In order to match
 electricity supply and balance the electrical grid, they proposed low-cost
 geographic load migration. They also suggested that a symbiotic relationship
@@ -142,7 +142,7 @@ is possible in both homogenous and heterogeneous systems. Their migration
 strategies were based on a manual process and can benefit from automation.
 
 \subsection{Datacenter Participation in Smart Grid \\Programs}
-Aikema et. al \cite{aikema_electrical_2011} explored the potential for HPC
+Aikema et al. \cite{aikema_electrical_2011} explored the potential for HPC
 centers to adapt to dynamic electrical prices, to variation in carbon intensity
 within an electrical grid, and to availability of local renewables. Their
 simulations demonstrated that 10- 50\% of electricity costs could potentially
